# plasticsplot

./: .gitignore  pyproject.toml  risk.html
plasticsplot/: plotter.py
static/: main.js  view.css
