[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plasticsplot"
version = "0.0.1"
authors = [
    { name = "hsmallbone", email = "harry@smallbone.io" },
]
description = "Plastics Plotter"
license = { file = "LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/hsmallbone/polarplot"
"Bug Tracker" = "https://github.com/hsmallbone/polarplot/issues"

[tool.hatch.build]
include = [
    "plasticsplot"
]